k8s/applications/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: bazarr
          image: ghcr.io/linuxserver/bazarr:1.5.6
          ports:
            - name: ingress
              containerPort: 6767
          volumeMounts:
            - name: bazarr
              mountPath: /config
            - name: libraries
              mountPath: /tv
              subPath: tv/sd
            - name: libraries
              mountPath: /movies
              subPath: movies/sd
      volumes:
        - name: bazarr
          persistentVolumeClaim:
            claimName: bazarr
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
      resources:
        limits:
          memory: 512Mi
        requests:
          cpu: 10m
          memory: 512Mi
