k8s/applications/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  type: ClusterIP
  ports:
    - name: bazarr
      port: 6767
      targetPort: bazarr
